--- a/act1.html
+++ b/act1.html
@@ -1,239 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Profile - Dark Pink Red Theme</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TAMAYO-PROFILE</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
     body {
         margin: 0;
-        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background: palevioletred; /* light pink */
+        font-family: Arial, sans-serif;
+        background: #f3f3f3;
         display: flex;
         justify-content: center;
         padding: 20px;
     }
 
-    .card {
+    .container {
         width: 900px;
         max-width: 100%;
-        background: darkviolet;
-        border-radius: 20px;
+        background: #ffffff;
+        border-radius: 18px;
         padding: 25px;
-        display: flex;
-        gap: 20px;
-        border: 3px solid indianred;
-        box-shadow: 0px 10px 30px rgba(0,0,0,0.3);
-        color: #fff;
-        flex-wrap: nowrap; /* landscape layout */
-    }
-
-    /* LEFT SIDE */
-    .left {
-        width: 30%;
         text-align: center;
-        flex-shrink: 0;
+        box-shadow: 0px 8px 25px rgba(0,0,0,0.1);
     }
 
-    .left img {
-        width: 220px;
-        height: 220px;
+    .profile-img {
+        width: 160px;
+        height: 160px;
         border-radius: 50%;
+        border: 4px solid #6200ea;
         object-fit: cover;
-        border: 4px solid mediumpurple;
+        margin-top: 20px;
     }
 
-    .name-box {
-        margin-top: 15px;
-        background: mediumpurple;
-        padding: 10px;
-        border-radius: 10px;
+    .name {
+        font-size: 28px;
         font-weight: bold;
-        font-size: 20px;
-        color: #fff;
+        color: #3700b3;
+        margin-top: 12px;
     }
 
-    .left p {
-        margin: 5px 0;
+    .course {
+        font-size: 16px;
+        margin-bottom: 15px;
+        color: #555;
     }
 
-    .email-btn {
-        display: inline-block;
-        background: #ff4d6d;
-        color: #fff;
-        padding: 8px 15px;
-        border-radius: 8px;
-        text-decoration: none;
-        margin-top: 10px;
-        font-weight: bold;
-        transition: 0.3s;
+    .info-card {
+        background: #efe0ff;
+        margin: 20px auto;
+        padding: 15px;
+        border-radius: 12px;
+        border-left: 5px solid #6200ea;
+        text-align: left;
+        width: auto;
     }
 
-    .email-btn:hover {
-        background: #ff1a3c;
-    }
-
-    /* RIGHT SIDE */
-    .right {
-        width: 70%;
+    .info-item {
+        font-size: 15px;
+        color: #3a007a;
+        margin: 8px 0;
         display: flex;
-        flex-direction: column;
-        gap: 20px;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .info-item i {
+        width: 18px;
+        color: #6200ea;
     }
 
     .section {
-        background: mediumpurple;
-        padding: 15px;
+        background: #eee4ff;
+        padding: 18px;
+        margin-top: 20px;
         border-radius: 12px;
-        border: 2px solid mediumpurple;
+        text-align: left;
+        border-left: 5px solid #6200ea;
     }
 
     .section h3 {
-        margin-top: 0;
-        color: #fff;
-    }
-
-    /* Row for Hobbies + Places */
-    .row {
+        margin: 0 0 10px 0;
+        color: #4a00c8;
         display: flex;
-        gap: 20px;
-        flex-wrap: wrap;
-        width: 100%;
-    }
-
-    /* Hobbies box */
-    .hobbies {
-        flex: 1;
-        min-width: 250px;
-    }
-
-    /* Places box */
-    .places-section {
-        flex: 2;
-        min-width: 400px;
-    }
-
-    /* Places cards */
-    .places {
-        display: flex;
-        gap: 12px;
-        flex-wrap: nowrap;
-        justify-content: space-between;
-    }
-
-    .place-card {
-        flex: 1;
-        max-width: 32%;
-        background: purple;
-        border-radius: 10px;
-        padding: 8px;
-        text-align: center;
-        border: 2px solid mediumpurple;
-        font-weight: bold;
-        color: #fff;
-        display: flex;
-        flex-direction: column;
         align-items: center;
+        gap: 10px;
     }
 
-    .place-card img {
-        width: 100%;
-        height: 180px; /* equal height for all images */
-        object-fit: cover; /* fill the card nicely */
+    .section h3 i {
+        color: #6200ea;
+    }
+
+    .social-btn {
+        display: block;
+        text-decoration: none;
+        color: #fff;
+        padding: 13px;
+        margin-top: 10px;
         border-radius: 8px;
+        font-weight: bold;
+        transition: 0.3s;
+        text-align: center;
     }
 
-    .place-card p {
+    .fb { background: #1877f2; }
+    .fb:hover { background: #0f5dcc; }
+
+    .ig { background: #d62976; }
+    .ig:hover { background: #a31f5c; }
+
+    ul {
         margin: 8px 0 0 0;
+        padding-left: 20px;
     }
 
-    /* Responsive adjustments */
-    @media (max-width: 768px) {
-        .card {
-            flex-direction: column;
-        }
+    ul li {
+        margin: 4px 0;
+    }
 
-        .left {
-            margin-bottom: 20px;
+    @media (max-width: 600px) {
+        .container {
+            padding: 18px;
         }
-
-        .row {
-            flex-direction: column;
-        }
-
-        .place-card {
-            max-width: 100%;
-            margin-bottom: 10px;
-        }
-
-        .place-card img {
-            height: 150px;
+        .profile-img {
+            width: 130px;
+            height: 130px;
         }
     }
 </style>
+
 </head>
 <body>
 
-<div class="card">
+<div class="container" id="home">
 
-    <!-- LEFT SIDE -->
-    <div class="left">
-        <a href="#"><img src="https://i.ibb.co/5X1Lvpvm/IMG-20251125-062605-943.jpg" alt="Profile"></a>
-        <div class="name-box">MICHELLE N. TAMAYO</div>
-        <p>BSIT 2209 | Student</p>
-        <br>
-        <p><strong>Birthday:</strong> July 9, 2006</p>
-        <p><strong>Email: </strong>michelletamayo496@gmail.com</p>
-        <p><strong>Phone:</strong> 09517564406</p>
-        <p><strong>Address:</strong> Tala, Caloocan City</p>
+    <img class="profile-img" src="https://i.ibb.co/PZgZ8G55/profile.jpg" alt="Michelle">
+    <div class="name">MICHELLE N. TAMAYO</div>
+    <div class="course">BSIT 2209 | Student</div>
+
+    <div class="info-card">
+        <div class="info-item"><i class="fas fa-calendar"></i> Birthday: July 9, 2006</div>
+        <div class="info-item"><i class="fas fa-location-dot"></i> Address: Tala, Caloocan City</div>
+        <div class="info-item"><i class="fas fa-phone"></i> Phone: 0951 756 4406</div>
+        <div class="info-item"><i class="fas fa-envelope"></i> Email: michelletamayo496@gmail.com</div>
     </div>
 
-    <!-- RIGHT SIDE -->
-    <div class="right">
+    <div class="section">
+        <h3><i class="fas fa-user"></i> About Me</h3>
+        Hello! I am Michelle, a student who loves exploring and learning new things. I enjoy listening to music, watching movies, and spending time with people I care about.
+    </div>
 
-        <!-- About Me Section -->
-        <div class="section">
-            <h3>About Me</h3>
-            <p>Hello! I am <strong>Michelle</strong>, a student who loves exploring and learning new things. I enjoy listening to music, watching movies, and spending time with the people I care about.</p>
-        </div>
+    <div class="section">
+        <h3><i class="fas fa-heart"></i> Hobbies</h3>
+        <ul>
+            <li>Listening to Music</li>
+            <li>Watching Movies & K-drama</li>
+            <li>Bonding with Family & Friends</li>
+        </ul>
+    </div>
 
-        <!-- Row: Hobbies + Places -->
-        <div class="row">
+    <div class="section">
+        <h3><i class="fas a-star"></i> Favorites</h3>
+        <ul>
+            <li>Color: Purple</li>
+            <li>Food: Fries & Street Food</li>
+            <li>Music Genre: OPM</li>
+        </ul>
+    </div>
 
-            <!-- Hobbies Section -->
-            <div class="section hobbies">
-                <h3>Hobbies</h3>
-                <ul>
-                    <li>Reading novels and manga</li>
-                    <li>Traveling to new places</li>
-                    <li>Playing online games</li>
-                    <li>Photography and editing pictures</li>
-                </ul>
-            </div>
+    <div class="section">
+        <h3><i class="fas fa-graduation-cap"></i> Education</h3>
+        <ul>
+            <li>BS in Information Technology - College (Current)</li>
+            <li>Electron College of Technical Education - Senior High School Graduate</li>
+        </ul>
+    </div>
 
-            <!-- Places I Want to Travel Section -->
-            <div class="section places-section">
-                <h3>Places I Want to Travel</h3>
-                <div class="places">
-                    <div class="place-card">
-                        <a href="https://ibb.co/sd97NkNs"><img src="https://i.ibb.co/sd97NkNs/fbe6f76fb04d02eef694a36114507a10.jpg" alt="Japan" border="0"></a>
-                        <p>Japan</p>
-                    </div>
-
-                    <div class="place-card">
-<a href="https://ibb.co/BHWgFTgt"><img src="https://i.ibb.co/BHWgFTgt/6c001b19bdadc4beb8796c0277b2b076.jpg" alt="Japan" border="0"></a>
-                        <p>South Korea</p>
-                    </div>
-
-                    <div class="place-card">
-                        <a href="https://ibb.co/PGhPTHy7"><img src="https://i.ibb.co/PGhPTHy7/6a99ee843798375c5f7049316e8d31ed.jpg" alt="Paris" border="0"></a>
-                        <p>Paris</p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
+    <div class="section">
+        <h3><i class="fas fa-phone"></i> Contact Me</h3>
+        <a class="social-btn fb" href="https://facebook.com/michelle.tamayoo" target="_blank">
+            <i class="fab fa-facebook"></i> Facebook
+        </a>
+        <a class="social-btn ig" href="https://instagram.com/_michhyyy_" target="_blank">
+            <i class="fab fa-instagram"></i> Instagram
+        </a>
     </div>
 
 </div>
